fix: Add dark mode support (#3)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary: #0077b3;
-  --primary-hover: #0088cc;
+  --primary: var(--color-sky-700);
+  --primary-hover: var(--color-sky-600);
+  --primary-text-link: var(--color-sky-700);
+  --primary-text-link-hover: var(--color-sky-600);
 }
 
 @theme inline {
@@ -18,6 +20,8 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --primary-text-link: var(--color-sky-500);
+    --primary-text-link-hover: var(--color-sky-400);
   }
 }
 
@@ -28,10 +32,10 @@ body {
 }
 
 .text-buttons {
-    color: var(--primary);
+    color: var(--primary-text-link);
 }
 a.text-buttons:hover {
-    color: var(--primary-hover);
+    color: var(--primary-text-link-hover);
 }
 
 .bg-buttons {
